--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	  <h1>Understanding Time, Space, and Complexity</h1>
+	  <p>Time complexity is a fundamental concept in computer science that helps determine how efficient an algorithm is in terms of the time it takes to run as a function of the input size.</p>
+	  <p><b>Space Complexity</b> refers to the amount of memory an algorithm uses in relation to the size of the input. A common example is O(n), which indicates that the memory usage grows linearly with the input size.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
